--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -12,8 +12,7 @@
             "debugOptions": [
                 "RedirectOutput"
             ],
-            "args": [],
-            "env": {"UOCCIN_PATH": "C:\\Users\\Giorgio.Gelardi\\Google Drive\\uoccin.test"}
+            "args": []
         }
     ]
 }
