--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -16,6 +16,8 @@
             "env": {
                 "UOCCINY_DB": "C:\\Workspace\\uocciny\\test\\data.db",
                 "UOCCIN_PATH": "C:\\Workspace\\uocciny\\test\\uoccin_path",
+                "TVDB_API_KEY": "A74D017DA5F2C3B0",
+                "TMDB_API_KEY": "4cb75e343ed38c533e19f547c44cf5d0",
             }
         }
     ]
