--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -18,6 +18,7 @@
                 "UOCCIN_PATH": "C:\\Workspace\\uocciny\\test\\uoccin_path",
                 "TVDB_API_KEY": "A74D017DA5F2C3B0",
                 "TMDB_API_KEY": "4cb75e343ed38c533e19f547c44cf5d0",
+                "IMDB_USER_ID": "ur31826272",
             }
         }
     ]
