--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.exclude": {
-        "**/*.spec.ts": true
+        "**/*.spec.ts": true,
+        "**/package-lock.json": true
     }
 }
