--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -10,5 +10,7 @@
         "**/*.log": true,
         "**/*.log.*": true,
         "**/*.lnk": true
-    }
+    },
+    "python.pythonPath": "C:\\Python27\\python.exe",
+    "python.linting.pylintEnabled": true
 }
