--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -9,7 +9,9 @@
         "**/*.pyc": true,
         "**/*.log": true,
         "**/*.log.*": true,
-        "**/*.lnk": true
+        "**/*.lnk": true,
+        "**/.classpath": true,
+        "**/.factorypath": true
     },
     "python.pythonPath": "C:\\Python27\\python.exe",
     "python.linting.pylintEnabled": true
