--- a/server/web.config
+++ b/server/web.config
@@ -11,8 +11,14 @@
     </system.webServer>
     <appSettings>
         <!-- Required settings -->
-        <add key="WSGI_HANDLER" value="log2g.app" />
-        <add key="PYTHONPATH" value="c:\inetpub\wwwroot\log2g\server" />
+        <add key="WSGI_HANDLER" value="uoccin.app" />
+        <add key="PYTHONPATH" value="c:\inetpub\wwwroot\uocciny\server" />
+        <!-- Application settings -->
+        <add key="UOCCINY_DB" value="data.db" />
+        <add key="UOCCIN_PATH" value="C:\Users\giorgio\Google Drive\uoccin" />
+        <add key="TVDB_API_KEY" value="A74D017DA5F2C3B0" />
+        <add key="TMDB_API_KEY" value="4cb75e343ed38c533e19f547c44cf5d0" />
+        <add key="IMDB_USER_ID" value="ur31826272" />
         <!-- Optional settings -->
         <!--<add key="WSGI_LOG" value="c:\inetpub\wwwroot\log2g\pippo.log" />-->
         <!--<add key="WSGI_RESTART_FILE_REGEX" value=".*((\.py)|(\.config))$" />-->
