--- a/client/src/web.config
+++ b/client/src/web.config
@@ -12,7 +12,7 @@
 						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
 						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
 					</conditions>
-					<action type="Rewrite" url="/log2g/" />
+					<action type="Rewrite" url="/uoccin/" />
 				</rule>
 			</rules>
         </rewrite>
